update lwjgl3 version to 3.4.3 and fix some JDK24+ warnings